crates/service/tests/completion/snapshots/features__completion__table__addr_type_incomplete.snap
---
source: crates/service/tests/completion/table.rs
expression: response
---
[
  {
    "label": "i32",
    "kind": 7,
    "documentation": {
      "kind": "markdown",
      "value": "The type `i32` classifies 32 bit integers."
    }
  },
  {
    "label": "i64",
    "kind": 7,
    "documentation": {
      "kind": "markdown",
      "value": "The type `i64` classifies 64 bit integers."
    }
  },
  {
    "label": "anyref",
    "kind": 7
  },
  {
    "label": "eqref",
    "kind": 7
  },
  {
    "label": "i31ref",
    "kind": 7
  },
  {
    "label": "structref",
    "kind": 7
  },
  {
    "label": "arrayref",
    "kind": 7
  },
  {
    "label": "nullref",
    "kind": 7
  },
  {
    "label": "funcref",
    "kind": 7
  },
  {
    "label": "nullfuncref",
    "kind": 7
  },
  {
    "label": "exnref",
    "kind": 7
  },
  {
    "label": "nullexnref",
    "kind": 7
  },
  {
    "label": "externref",
    "kind": 7
  },
  {
    "label": "nullexternref",
    "kind": 7
  }
]
