crates/service/tests/completion/snapshots/features__completion__table__after_top_level_paren.snap
---
source: crates/service/tests/completion/table.rs
expression: response
---
[
  {
    "label": "import",
    "kind": 14
  },
  {
    "label": "export",
    "kind": 14
  },
  {
    "label": "elem",
    "kind": 14
  }
]
