crates/service/tests/completion/snapshots/features__completion__table__call_indirect_following_dollar.snap
---
source: crates/service/tests/completion/table.rs
expression: response
---
[
  {
    "label": "$table",
    "kind": 6,
    "textEdit": {
      "range": {
        "start": {
          "line": 4,
          "character": 18
        },
        "end": {
          "line": 4,
          "character": 19
        }
      },
      "newText": "$table"
    }
  }
]
