crates/service/tests/completion/snapshots/features__completion__table__deprecated.snap
---
source: crates/service/tests/completion/table.rs
expression: response
---
[
  {
    "label": "$table",
    "kind": 6,
    "tags": [
      1
    ]
  },
  {
    "label": "1",
    "kind": 6,
    "tags": [
      1
    ]
  }
]
