crates/service/tests/completion/snapshots/features__completion__table__elem_without_parens.snap
---
source: crates/service/tests/completion/table.rs
expression: response
---
[
  {
    "label": "$f",
    "kind": 3,
    "detail": "(func $f)",
    "documentation": {
      "kind": "markdown",
      "value": ""
    }
  }
]
