crates/service/tests/completion/snapshots/features__completion__table__export_following_int_index.snap
---
source: crates/service/tests/completion/table.rs
expression: response
---
[
  {
    "label": "$table",
    "kind": 6
  },
  {
    "label": "1",
    "kind": 6
  }
]
